@@ -2,7 +2,7 @@
 connect_method = local
 
 [hosts]
-localhost = component1, component2, component3, component4, missingcomponent, cycle1, cycle2, dnsproblem
+localhost = component1, component2, component3, component4, missingcomponent, cycle1, cycle2, dnsproblem, crontab
 
 [component:component1]
 do_what_is_needed = false
